// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chinese-japanese.md - markdown-verify 1`] = `
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長
很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白
全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白
全形空白　空白全形空白全形空白全形空白

`;

exports[`korean.md - markdown-verify 1`] = `
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

`;

exports[`link.md - markdown-verify 1`] = `
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

`;

exports[`mixed.md - markdown-verify 1`] = `
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

`;

exports[`space.md - markdown-verify 1`] = `
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

`;
